--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,5 @@
-POSTGRES_URL=
-POSTGRES_PORT=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
+POSTGRES_DB_STR=
 VK_APP_ID=
 VK_PRIVATE_KEY=
+VK_SERVICE_TOKEN=
+VK_CLIENT_TOKEN=
